--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <title>JavaScript | Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
