--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 
   <body>
     <div class="wrapper">
-
+      <div class="scoreboard">
+        <div class="title">
+          <img src="assets\title.png" alt="title" />
+        </div>
+        <div class="score">
+          <p>Score</p>
+          <h1>0</h1>
+        </div>
+      </div>
     </div>
   </body>
 </html>
