--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
           <h1>0</h1>
         </div>
       </div>
+      <div class="hands">
+        <div class="paper">
+          <img src="/assets/Paper.png" />
+        </div>
+        <div class="scissors">
+          <img src="/assets/Scissors.png" />
+        </div>
+        <div class="rock">
+          <img src="/assets/Rock.png" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
