--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         </div>
       </div>
       <div class="hands">
-        <div class="paper">
+        <div class="hand paper">
           <img src="/assets/Paper.png" />
         </div>
-        <div class="scissors">
+        <div class="hand scissors">
           <img src="/assets/Scissors.png" />
         </div>
-        <div class="rock">
+        <div class="hand rock">
           <img src="/assets/Rock.png" />
         </div>
       </div>
