--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
       </div>
       <div class="hands">
         <div class="hand paper">
-          <img src="/assets/Paper.png" />
+          <img src="/assets/Paper.png" onclick="pickUserHand('paper')" />
         </div>
         <div class="hand scissors">
-          <img src="/assets/Scissors.png" />
+          <img src="/assets/Scissors.png" onclick="pickUserHand('scissors')" />
         </div>
         <div class="hand rock">
-          <img src="/assets/Rock.png" />
+          <img src="/assets/Rock.png" onclick="pickUserHand('rock')" />
         </div>
       </div>
     </div>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
