--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
           <img src="/assets/Rock.png" onclick="pickUserHand('rock')" />
         </div>
       </div>
+      <div class="contest">
+        <div class="userhand">
+          <h1>YOU PICKED</h1>
+          <div class="handImageContainer">
+            <img src="/assets/Paper.png" />
+          </div>
+        </div>
+        <div class="referee">
+          <div class="decision"><h1>YOU WIN!</h1></div>
+          <div class="newGame">PLAY AGAIN</div>
+        </div>
+        <div class="computerhand">
+          <h1>THE HOUSE PICKED</h1>
+          <div class="handImageContainer">
+            <img src="/assets/Scissors.png" />
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="js/script.js"></script>
