--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="userhand">
           <h1>YOU PICKED</h1>
           <div class="handImageContainer">
-            <img src="/assets/Paper.png" />
+            <img id="userPickImage" src="/assets/Paper.png" />
           </div>
         </div>
         <div class="referee">
