Set `id='computerPickImage'` from `cpHand` && using the `dictionary` object `handOptions`

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="computerhand">
           <h1>THE HOUSE PICKED</h1>
           <div class="handImageContainer">
-            <img src="/assets/Scissors.png" />
+            <img id="computerPickImage" src="/assets/Scissors.png" />
           </div>
         </div>
       </div>
