`restartGame()` function || switch to `.hands` div by hide `.contest` div from the `js` using `style.display: 'flex'`

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="referee">
           <div class="decision"><h1>YOU WIN!</h1></div>
-          <div class="newGame">PLAY AGAIN</div>
+          <div class="newGame" onclick="restartGame()">PLAY AGAIN</div>
         </div>
         <div class="computerhand">
           <h1>THE HOUSE PICKED</h1>
