--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
       </div>
       <div class="hands">
         <div class="hand paper">
-          <img src="/assets/Paper.png" onclick="pickUserHand('paper')" />
+          <img src="./assets/Paper.png" onclick="pickUserHand('paper')" />
         </div>
         <div class="hand scissors">
-          <img src="/assets/Scissors.png" onclick="pickUserHand('scissors')" />
+          <img src="./assets/Scissors.png" onclick="pickUserHand('scissors')" />
         </div>
         <div class="hand rock">
-          <img src="/assets/Rock.png" onclick="pickUserHand('rock')" />
+          <img src="./assets/Rock.png" onclick="pickUserHand('rock')" />
         </div>
       </div>
       <div class="contest">
         <div class="userhand">
           <h1>YOU PICKED</h1>
           <div class="handImageContainer">
-            <img id="userPickImage" src="/assets/Paper.png" />
+            <img id="userPickImage" src="./assets/Paper.png" />
           </div>
         </div>
         <div class="referee">
@@ -50,7 +50,7 @@
         <div class="computerhand">
           <h1>THE HOUSE PICKED</h1>
           <div class="handImageContainer">
-            <img id="computerPickImage" src="/assets/Scissors.png" />
+            <img id="computerPickImage" src="./assets/Scissors.png" />
           </div>
         </div>
       </div>
